# taskwork

./: CMakeLists.txt  LICENSE  README.md
include/: taskwork.h
src/: config.hpp  log.hpp  taskwork.cpp  worker.cpp  worker.hpp
test/: demo_main.cpp
